isotopes-and-atomic-mass: Increased the font size for element names in the symbol node in isotopes sim
isotopes-and-atomic-mass: Hide the charge indicator node in the isotopes sim
centered the text in symbol nodes
improved layout and tolerance for displaying values in AbundanceIndicator
Internationalized AbundanceIndicator
Improved AbundanceIndicator to say that C14 has a "very small" amount instead of 0
Added white background for AbundanceIndicator
Added trace amount of Carbon-14 to the isotope table.
Added title for 2nd tab of Isotopes sim.
# 2.00.02 (47929) Jan 13, 2011
1/13/11 Deploying to dev to correct an issue with launching of Isotopes.
# 2.00.01 (47918) Jan 12, 2011
1/12/11 Publishing to dev for review of some UI compenents
Added the scale for Isotopes.
Converted the periodic table to use buttons.
Added animation developer control to Isotopes.
Changed the title for the first tab of Isotopes.
Added the bulk for functionality for the first tab of Isotopes and Atomic Mass.
# 2.00.00 (47377) Dec 22, 2010
12/22/10 Redeploy of version 2.0 due to deployment issues.
12/22/10 Redeploying in order to capture screen shot, should still be version 2.0.
12/22/10 >Added the "Game" tab.
12/22/10 Changed the string "Charge" to "Net Charge".
12/21/10 replace incomplete "Reset All" node with ResetAllButtonNode
# 1.00.18 (47184) Dec 15, 2010
12/15/10 Minor fixes (see log for details), this is another release candidate for first version with game.
Removed debug printouts.
Fixed issue where it was possible in some cases to get the same problem type twice in a row.
# 1.00.17 (47152) Dec 14, 2010
12/14/10 Implemented changes requested in recent chem group meeting.  This is a release candidate for first production version with game.
Made all game problems that are non-schematic use atoms that are heavier than lithium.
Made the spinners within the game problems select the contained text when focused upon.
# 1.00.16 (47100) Dec 13, 2010